service-private.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-react
  namespace: ibmid-667000nwl8-hktijvj4
  labels:
    app: hello-react
spec:
  selector:
    app: hello-react
  ports:
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
