service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: http-8081
      port: 8081       # external cluster port
      targetPort: 8081 # container port
      protocol: TCP
