deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: docker.io/ruslanmv/hello-react:1.0.0
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu:    "100m"
              memory: "128Mi"
            limits:
              cpu:    "200m"
              memory: "256Mi"
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app
spec:
  to:
    kind: Service
    name: my-app       # must match the Service name
  port:
    targetPort: 80
  # Optional TLS:
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
