route-private.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-react
  namespace: ibmid-667000nwl8-hktijvj4
  labels:
    app: hello-react
spec:
  port:
    targetPort: http-8080
  to:
    kind: Service
    name: hello-react
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
