route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  to:
    kind: Service
    name: my-app
    weight: 100
  port:
    targetPort: http-8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
